--- a/deep-learning-fundamentals/unit08-NLP/01-bag-of-words/02_self_attention_from_scratch.ipynb
+++ b/deep-learning-fundamentals/unit08-NLP/01-bag-of-words/02_self_attention_from_scratch.ipynb
@@ -79,7 +79,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8d149d5e-86bd-4207-fb72-ac4c77f442c1"
+        "outputId": "2f356b28-f58c-4e99-8bfb-d2dab66fbd56"
       },
       "outputs": [
         {
@@ -110,7 +110,7 @@
       ],
       "metadata": {
         "id": "-vCUMM0OYA5k",
-        "outputId": "67ec887a-5ce0-4125-c232-cecde8cac198",
+        "outputId": "79d016ba-2eff-4e4d-a4d2-8a56f330c3b4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -139,7 +139,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f69acecc-a05d-4789-d378-c70c681c0815"
+        "outputId": "c4e293bd-f96e-4a80-d92d-64b7d7b77743"
       },
       "outputs": [
         {
@@ -211,7 +211,7 @@
       ],
       "metadata": {
         "id": "5SLyXO8CZqVW",
-        "outputId": "d3800b46-809a-46da-9b97-fd2049e19419",
+        "outputId": "0423bdcc-9d99-4bfb-d8ce-c1de9a510e96",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -247,7 +247,7 @@
       "id": "65d50678-3ab0-4075-ab50-3c12e63fd95f",
       "metadata": {
         "id": "65d50678-3ab0-4075-ab50-3c12e63fd95f",
-        "outputId": "62c7e4ff-6912-4a61-c7e4-6a67459bd693",
+        "outputId": "87fa5f84-8a18-4d1a-b09f-f12e334437fe",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -278,11 +278,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 8,
       "id": "03491130-ad33-4fb7-8ed2-12de9662d400",
       "metadata": {
         "id": "03491130-ad33-4fb7-8ed2-12de9662d400",
-        "outputId": "443ff3f8-fadf-4e25-a0af-2aed5ac96e93",
+        "outputId": "b8d3aa40-9ef3-4c6b-c409-c7aba6410717",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -315,7 +315,7 @@
       "id": "12dd8956-f4db-410b-94c0-78190a8881cf",
       "metadata": {
         "id": "12dd8956-f4db-410b-94c0-78190a8881cf",
-        "outputId": "51a64083-fa04-432e-a0e6-a46ab9294c3a",
+        "outputId": "adc75d5a-9fa5-4bb1-a297-d8bbe52ce294",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -360,7 +360,7 @@
       "id": "9e42b356-2aad-4447-b714-be0880df3c6c",
       "metadata": {
         "id": "9e42b356-2aad-4447-b714-be0880df3c6c",
-        "outputId": "03687442-0918-460b-e424-d40c64c62274",
+        "outputId": "5f5d870a-ed01-4892-b8b6-f782088c4c4d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -386,7 +386,7 @@
       "id": "3f185b5b-b7b2-4660-b6df-8c6faee8bf19",
       "metadata": {
         "id": "3f185b5b-b7b2-4660-b6df-8c6faee8bf19",
-        "outputId": "5b13a206-b337-49c2-fb93-72efbb689017",
+        "outputId": "ecadcf8f-c911-467e-b43f-4316ba868058",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -416,13 +416,13 @@
       ],
       "metadata": {
         "id": "Yiqyr6mQsOmz",
-        "outputId": "d1152510-c553-4d9c-d9de-cc4e090431b4",
+        "outputId": "d02ccfac-ddfa-4ef9-8a13-c667c3be96d6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "Yiqyr6mQsOmz",
-      "execution_count": 19,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -460,10 +460,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "14345a2c-4b37-410c-b1a5-d7073f1e2232"
+        "outputId": "2999ee64-4964-42d6-cbc3-b9880352fbd6"
       },
       "id": "UbozZ3ZSGmjF",
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -484,13 +484,13 @@
       ],
       "metadata": {
         "id": "IAWTtYdGtOMH",
-        "outputId": "e1dc6416-fba2-463e-b120-0bb08fb7ca62",
+        "outputId": "4862254d-a6ce-4421-d235-22b4f4b18902",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "IAWTtYdGtOMH",
-      "execution_count": 20,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -519,14 +519,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 15,
       "id": "ae181592-134d-4cff-983f-90d6fcae5068",
       "metadata": {
         "id": "ae181592-134d-4cff-983f-90d6fcae5068",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5bb34d17-a431-482d-acc4-e1e7c0a2c207"
+        "outputId": "17e28873-e920-44c8-b457-a2b992c9c8bb"
       },
       "outputs": [
         {
@@ -556,13 +556,13 @@
       ],
       "metadata": {
         "id": "YfsaCo8jt93L",
-        "outputId": "9d491227-6a3a-4604-d3e6-d5ae129bd20f",
+        "outputId": "41665cb5-4752-41cc-fe77-09967996e4cc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "YfsaCo8jt93L",
-      "execution_count": 23,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -572,7 +572,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 16
         }
       ]
     },
@@ -587,13 +587,13 @@
       ],
       "metadata": {
         "id": "xA-qcIq-tla0",
-        "outputId": "4632d195-c771-482d-dd34-35334fde26a8",
+        "outputId": "ad8d2c92-f9ab-4b92-cc2a-0c0cd1a4f639",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "xA-qcIq-tla0",
-      "execution_count": 21,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -643,7 +643,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# (6x6)(6x28) = (1x28)\n",
+        "# (6x6)(6x28) = (6x28)\n",
         "attention_weights.shape, values.shape, context_vector.shape"
       ],
       "metadata": {
@@ -651,10 +651,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CxfOCNguqbtF",
-        "outputId": "c58c7822-6d35-424a-9fcd-1ef0f1727cd6"
+        "outputId": "850edea5-2162-4c1d-9ba7-08e67c1f248f"
       },
       "id": "CxfOCNguqbtF",
-      "execution_count": 24,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -664,7 +664,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 18
         }
       ]
     },
@@ -680,13 +680,371 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# suppose we have 3 attention heads\n",
+        "h = 3\n",
+        "\n",
+        "M_W_Q = torch.nn.Parameter(torch.rand(h, d_q, d))\n",
+        "M_W_K = torch.nn.Parameter(torch.rand(h, d_k, d))\n",
+        "M_W_V = torch.nn.Parameter(torch.rand(h, d_v, d))\n",
+        "\n",
+        "print(M_W_Q.shape, M_W_K.shape, M_W_V.shape)"
+      ],
       "metadata": {
-        "id": "1j_PgpHMrFng"
+        "id": "1j_PgpHMrFng",
+        "outputId": "fbbffc62-c066-40c9-86b7-bf9c040f6755",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "id": "1j_PgpHMrFng",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([3, 24, 16]) torch.Size([3, 24, 16]) torch.Size([3, 28, 16])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let’s keep the focus on the 3rd element\n",
+        "multihead_query_2 = M_W_Q.matmul(x_2)\n",
+        "print(multihead_query_2.shape)"
+      ],
+      "metadata": {
+        "id": "btqWaxYpUMJJ",
+        "outputId": "27937b00-e996-4a2d-fc72-408820e6dffa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "btqWaxYpUMJJ",
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([3, 24])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# We can then obtain the keys and values in a similar fashion\n",
+        "multihead_key_2 = M_W_K.matmul(x_2)\n",
+        "multihead_value_2 = M_W_V.matmul(x_2)\n",
+        "\n",
+        "multihead_key_2.shape, multihead_value_2.shape"
+      ],
+      "metadata": {
+        "id": "mngmyS2uUgkK",
+        "outputId": "b7ce6c57-98a7-44ba-c37e-5fda41183929",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "mngmyS2uUgkK",
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Size([3, 24]), torch.Size([3, 28]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(embedded_sentence.shape)"
+      ],
+      "metadata": {
+        "id": "4HsrfRVrUuNG",
+        "outputId": "e6308921-7fcc-4321-f7a6-54c46a543ff9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "4HsrfRVrUuNG",
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([6, 16])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# expanding the input sequence embeddings to size 3, i.e., the number of attention heads\n",
+        "stacked_inputs = embedded_sentence.T.repeat(3, 1, 1)\n",
+        "stacked_inputs.shape"
+      ],
+      "metadata": {
+        "id": "jQ4JRvSSVbXF",
+        "outputId": "3cf3c65f-23dc-44f5-9444-0fe831b999f3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "jQ4JRvSSVbXF",
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([3, 16, 6])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Now, we can compute all the keys and values\n",
+        "multihead_keys = torch.bmm(M_W_K, stacked_inputs)\n",
+        "multihead_values = torch.bmm(M_W_V, stacked_inputs)\n",
+        "\n",
+        "print(f\"multihead_keys shape: {multihead_keys.shape}\")\n",
+        "print(f\"multihead_values shape: {multihead_values.shape}\")"
+      ],
+      "metadata": {
+        "id": "q3c0RapJVvHX",
+        "outputId": "cfe15c3f-f3bc-4c46-c301-70221ca6a3f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "q3c0RapJVvHX",
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "multihead_keys shape: torch.Size([3, 24, 6])\n",
+            "multihead_values shape: torch.Size([3, 28, 6])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let's swap the second and third dimensions\n",
+        "multihead_keys = multihead_keys.permute(0, 2, 1)\n",
+        "multihead_values = multihead_values.permute(0, 2, 1)\n",
+        "\n",
+        "print(f\"multihead_keys shape: {multihead_keys.shape}\")\n",
+        "print(f\"multihead_values shape: {multihead_values.shape}\")"
+      ],
+      "metadata": {
+        "id": "IS5L8d-4WPjz",
+        "outputId": "c3288b85-7766-41d3-d5de-068fc19cfcdc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "IS5L8d-4WPjz",
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "multihead_keys shape: torch.Size([3, 6, 24])\n",
+            "multihead_values shape: torch.Size([3, 6, 28])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "multihead_queries = torch.bmm(M_W_Q, stacked_inputs)\n",
+        "print(f\"multihead_queries shape: {multihead_queries.shape}\")"
+      ],
+      "metadata": {
+        "id": "_2ASwmBhYBNc",
+        "outputId": "09f5998d-618e-4a04-fcfa-a2718cd90a7f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "_2ASwmBhYBNc",
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "multihead_queries shape: torch.Size([3, 24, 6])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "multihead_queries = multihead_queries.permute(1, 0, 2)\n",
+        "print(f\"multihead_queries shape: {multihead_queries.shape}\")"
+      ],
+      "metadata": {
+        "id": "8eKSEQdTZyhZ",
+        "outputId": "288ec665-d354-4411-d37b-b9f66be0e0ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "8eKSEQdTZyhZ",
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "multihead_queries shape: torch.Size([6, 24, 3])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let’s compute the ω values for all query and key\n",
+        "# (3, 24, 6)(3, 6, 24) = (3, 24, 24)\n",
+        "omegas = multihead_queries.bmm(multihead_keys)\n",
+        "print(omegas.shape)"
+      ],
+      "metadata": {
+        "id": "85phxx3LZrjJ",
+        "outputId": "7ab33fd0-fecf-4ed0-8f2f-be09c59a0f46",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 228
+        }
+      },
+      "id": "85phxx3LZrjJ",
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "RuntimeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-84-eec0071f11be>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# let’s compute the ω values for all query and key\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# (3, 24, 6)(3, 6, 24) = (3, 24, 24)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0momegas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmultihead_query_2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbmm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmultihead_keys\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0momegas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mRuntimeError\u001b[0m: batch1 must be a 3D tensor"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let’s compute the attention score for all input\n",
+        "attention_weights = F.softmax(omegas / d_k ** 0.5, dim=0)\n",
+        "print(attention_weights.shape)"
+      ],
+      "metadata": {
+        "id": "5kkaObFPZVxP",
+        "outputId": "d3df3550-adcd-474a-dd99-91a01602a989",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "5kkaObFPZVxP",
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([3, 24, 24])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "attention_weights = attention_weights.permute(0, 2, 1)\n",
+        "print(f\"attention_weights shape: {attention_weights.shape}\")"
+      ],
+      "metadata": {
+        "id": "7Gq4ZdLwbhNe",
+        "outputId": "510943d4-8334-41de-fa2a-018beddb817e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "7Gq4ZdLwbhNe",
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "attention_weights shape: torch.Size([3, 6, 6])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let’s compute the context vector for all\n",
+        "# (3, 24, 24)(3, 6, 28) = (3, 24, 24)\n",
+        "context_vector = attention_weights.bmm(multihead_values.T)\n",
+        "\n",
+        "print(context_vector.shape)\n",
+        "print(context_vector)"
+      ],
+      "metadata": {
+        "id": "HaPDeUErbFTc",
+        "outputId": "5223f550-60e8-4763-f9f8-5cbb67781030",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 245
+        }
+      },
+      "id": "HaPDeUErbFTc",
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "RuntimeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-73-96c71b81174c>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# let’s compute the context vector for all\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# (3, 24, 24)(3, 6, 28) = (3, 24, 24)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mcontext_vector\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mattention_weights\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbmm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmultihead_values\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontext_vector\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mRuntimeError\u001b[0m: Expected size for first two dimensions of batch2 tensor to be: [3, 24] but got: [28, 6]."
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
