--- a/deep-learning-fundamentals/unit08-NLP/01-bag-of-words/02_self_attention_from_scratch.ipynb
+++ b/deep-learning-fundamentals/unit08-NLP/01-bag-of-words/02_self_attention_from_scratch.ipynb
@@ -692,10 +692,10 @@
       ],
       "metadata": {
         "id": "1j_PgpHMrFng",
-        "outputId": "fbbffc62-c066-40c9-86b7-bf9c040f6755",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fbbffc62-c066-40c9-86b7-bf9c040f6755"
       },
       "id": "1j_PgpHMrFng",
       "execution_count": 21,
@@ -717,11 +717,11 @@
         "print(multihead_query_2.shape)"
       ],
       "metadata": {
-        "id": "btqWaxYpUMJJ",
-        "outputId": "27937b00-e996-4a2d-fc72-408820e6dffa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "btqWaxYpUMJJ",
+        "outputId": "27937b00-e996-4a2d-fc72-408820e6dffa"
       },
       "id": "btqWaxYpUMJJ",
       "execution_count": 22,
@@ -745,11 +745,11 @@
         "multihead_key_2.shape, multihead_value_2.shape"
       ],
       "metadata": {
-        "id": "mngmyS2uUgkK",
-        "outputId": "b7ce6c57-98a7-44ba-c37e-5fda41183929",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mngmyS2uUgkK",
+        "outputId": "b7ce6c57-98a7-44ba-c37e-5fda41183929"
       },
       "id": "mngmyS2uUgkK",
       "execution_count": 23,
@@ -772,11 +772,11 @@
         "print(embedded_sentence.shape)"
       ],
       "metadata": {
-        "id": "4HsrfRVrUuNG",
-        "outputId": "e6308921-7fcc-4321-f7a6-54c46a543ff9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4HsrfRVrUuNG",
+        "outputId": "e6308921-7fcc-4321-f7a6-54c46a543ff9"
       },
       "id": "4HsrfRVrUuNG",
       "execution_count": 24,
@@ -798,11 +798,11 @@
         "stacked_inputs.shape"
       ],
       "metadata": {
-        "id": "jQ4JRvSSVbXF",
-        "outputId": "3cf3c65f-23dc-44f5-9444-0fe831b999f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jQ4JRvSSVbXF",
+        "outputId": "3cf3c65f-23dc-44f5-9444-0fe831b999f3"
       },
       "id": "jQ4JRvSSVbXF",
       "execution_count": 25,
@@ -830,11 +830,11 @@
         "print(f\"multihead_values shape: {multihead_values.shape}\")"
       ],
       "metadata": {
-        "id": "q3c0RapJVvHX",
-        "outputId": "cfe15c3f-f3bc-4c46-c301-70221ca6a3f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "q3c0RapJVvHX",
+        "outputId": "cfe15c3f-f3bc-4c46-c301-70221ca6a3f9"
       },
       "id": "q3c0RapJVvHX",
       "execution_count": 82,
@@ -860,11 +860,11 @@
         "print(f\"multihead_values shape: {multihead_values.shape}\")"
       ],
       "metadata": {
-        "id": "IS5L8d-4WPjz",
-        "outputId": "c3288b85-7766-41d3-d5de-068fc19cfcdc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "IS5L8d-4WPjz",
+        "outputId": "c3288b85-7766-41d3-d5de-068fc19cfcdc"
       },
       "id": "IS5L8d-4WPjz",
       "execution_count": 83,
@@ -886,11 +886,11 @@
         "print(f\"multihead_queries shape: {multihead_queries.shape}\")"
       ],
       "metadata": {
-        "id": "_2ASwmBhYBNc",
-        "outputId": "09f5998d-618e-4a04-fcfa-a2718cd90a7f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_2ASwmBhYBNc",
+        "outputId": "09f5998d-618e-4a04-fcfa-a2718cd90a7f"
       },
       "id": "_2ASwmBhYBNc",
       "execution_count": 76,
@@ -911,11 +911,11 @@
         "print(f\"multihead_queries shape: {multihead_queries.shape}\")"
       ],
       "metadata": {
-        "id": "8eKSEQdTZyhZ",
-        "outputId": "288ec665-d354-4411-d37b-b9f66be0e0ac",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8eKSEQdTZyhZ",
+        "outputId": "288ec665-d354-4411-d37b-b9f66be0e0ac"
       },
       "id": "8eKSEQdTZyhZ",
       "execution_count": 80,
@@ -938,12 +938,12 @@
         "print(omegas.shape)"
       ],
       "metadata": {
-        "id": "85phxx3LZrjJ",
-        "outputId": "7ab33fd0-fecf-4ed0-8f2f-be09c59a0f46",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 228
-        }
+        },
+        "id": "85phxx3LZrjJ",
+        "outputId": "7ab33fd0-fecf-4ed0-8f2f-be09c59a0f46"
       },
       "id": "85phxx3LZrjJ",
       "execution_count": 84,
@@ -969,11 +969,11 @@
         "print(attention_weights.shape)"
       ],
       "metadata": {
-        "id": "5kkaObFPZVxP",
-        "outputId": "d3df3550-adcd-474a-dd99-91a01602a989",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5kkaObFPZVxP",
+        "outputId": "d3df3550-adcd-474a-dd99-91a01602a989"
       },
       "id": "5kkaObFPZVxP",
       "execution_count": 72,
@@ -994,11 +994,11 @@
         "print(f\"attention_weights shape: {attention_weights.shape}\")"
       ],
       "metadata": {
-        "id": "7Gq4ZdLwbhNe",
-        "outputId": "510943d4-8334-41de-fa2a-018beddb817e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7Gq4ZdLwbhNe",
+        "outputId": "510943d4-8334-41de-fa2a-018beddb817e"
       },
       "id": "7Gq4ZdLwbhNe",
       "execution_count": 63,
@@ -1023,12 +1023,12 @@
         "print(context_vector)"
       ],
       "metadata": {
-        "id": "HaPDeUErbFTc",
-        "outputId": "5223f550-60e8-4763-f9f8-5cbb67781030",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 245
-        }
+        },
+        "id": "HaPDeUErbFTc",
+        "outputId": "5223f550-60e8-4763-f9f8-5cbb67781030"
       },
       "id": "HaPDeUErbFTc",
       "execution_count": 73,
@@ -1045,6 +1045,26 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##7) Cross-Attention"
+      ],
+      "metadata": {
+        "id": "St2JwcEyhOmv"
+      },
+      "id": "St2JwcEyhOmv"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ZXa7dVhvhQhO"
+      },
+      "id": "ZXa7dVhvhQhO",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
